# orbit

./: .env.example  .gitignore  Orbit_Investor_PreKickstarter_Deck.pptx  README.md
.github/workflows/: deploy-pages.yml
docs/: architecture.md  hardware-readiness.md  safety-review-checklist.md
orbit-app/: app.json  config.ts  package-lock.json  package.json  start-web.cjs
orbit-app/app/: _layout.tsx  capture.tsx  converse.tsx  efficiency.tsx  focus.tsx  glance.tsx  guide.tsx  index.tsx  memories.tsx  onboarding.tsx
orbit-app/components/: CameraView.tsx  FloatingMerope.tsx  GlassCard.tsx  MeropeAvatar.tsx  ModeRing.tsx  (+4 more)
orbit-companion/: index.html  package-lock.json  package.json  start.cjs  start.js  tailwind.config.js
orbit-runtime/: pyproject.toml
orbit-runtime/orbit/: __init__.py  config.py  main.py
orbit-runtime/orbit/adapters/: base.py  mock_world.py  px4_adapter.py  sim_adapter.py  sim_engine.py
orbit-runtime/orbit/api/: routes.py  schemas.py  ws.py
orbit-runtime/orbit/brain/: context.py  explainer.py  intent_parser.py
orbit-runtime/orbit/core/: mission.py  mode_manager.py  orchestrator.py  telemetry.py
orbit-runtime/orbit/core/controllers/: dock_controller.py  orbit_controller.py  position_controller.py
orbit-runtime/orbit/logging_/: event_log.py  replay.py  telemetry_log.py
orbit-runtime/orbit/protocol/: messages.py
orbit-runtime/orbit/safety/: emergency.py  geofence.py  rules.py  supervisor.py
orbit-runtime/tests/: test_controllers.py  test_intent_parser.py  test_mode_manager.py  test_safety_supervisor.py  test_sim_engine.py
(+40 files in other folders)
